comunicacion api asp.net y despliegue de proceso de venta , validacion de usuario.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,64 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PASO MAIN FERIA VIRTUAL!!"
+        android:layout_width="0dp"
+        android:layout_height="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.049" />
+
+    <Button
+        android:id="@+id/btnSincronizar"
+        android:layout_width="215dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="104dp"
+        android:text="Mis Datos"
+        android:background="#00574B"
+        android:textColor="#FFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="93dp" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="310dp" />
+
+    <Button
+        android:id="@+id/btnProceso"
+        android:layout_width="214dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="304dp"
+        android:layout_marginEnd="104dp"
+        android:background="#00574B"
+        android:onClick="proceso"
+        android:text="Proceso de Venta"
+        android:textColor="#FFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnAjustes"
+        android:layout_width="212dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="408dp"
+        android:layout_marginEnd="104dp"
+        android:text="CONTRATO"
+        android:background="#00574B"
+        android:textColor="#FFFF"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
