--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,10 @@
 <resources>
 
-
+    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/com_auth0_lock_submit_normal</item>
-        <item name="colorPrimaryDark">@color/com_auth0_lock_submit_pressed</item>
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
-    <style name="MyTheme" parent="Lock.Theme">
-        <item name="colorPrimaryDark">@color/com_auth0_lock_submit_pressed</item>
-    <item name="Auth0.HeaderLogo">@drawable/com_auth0_lock_header_logo</item>
-    <item name="Auth0.HeaderTitle">@string/com_auth0_lock_header_title</item>
-    <item name="Auth0.HeaderTitleColor">@color/com_auth0_lock_text</item>
-    <item name="Auth0.HeaderBackground">#00574B</item>
-    <item name="Auth0.PrimaryColor">@color/com_auth0_lock_submit_normal</item>
-    <item name="Auth0.DarkPrimaryColor">@color/com_auth0_lock_submit_pressed</item>
-    </style>
-
 </resources>
-
